# backend/docs/swagger.json
@@ -609,6 +609,12 @@
                             "$ref": "#/definitions/internal_presentation_http.ErrorResponse"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/internal_presentation_http.ErrorResponse"
+                        }
+                    },
                     "422": {
                         "description": "Unprocessable Entity",
                         "schema": {
@@ -792,8 +798,8 @@
                         "type": "string"
                     }
                 },
-                "template": {
-                    "$ref": "#/definitions/keepmoments_backend_internal_logic.ProcessTemplate"
+                "template_id": {
+                    "type": "string"
                 },
                 "user_description": {
                     "type": "string"
